Staging (#70)
* :sparkles: add route to get Thmes

* change dates of creation messages

* add save geolocalisation for registration & fix size activity images

* :construction: temp

* :hammer: minor change to works with front reusable button and ez display of theme icon

* Feature/issue-25/create-login-modal

- Trigger user informations to frontend
- Rename geolocalisation to geolocation
- Add login DTO for geolocation, association, activity, association follower and voluntary

* review Pilou in progress for staging

* feature/issue-25/create-login-modal: add validators on register and login routes (#23)

* feature: add new asso, activities and images to display more cards

* feat: add themes to new activities

* Hotfix/issue 9998/review staging (#26)

* add default Avatar image for association and also a type to identify user and voluntary

* :hammer: theme are now sorted by backend

* :hammer: add route for activityById and fix cors and fix isIS

* Development (#37)

* delete old way to handle interactions user

* handle unread messages activities for users (#27)

Co-authored-by: Emmanuelle BONOLI <manu.bonoli@gmail.com>

* Feature/issue 34/create activity page (#29)

* :construction: WIP

* :sparkles: backend fully operational for adding an new activity to DB

* Feature/issue 45/admin report (#31)

* Hotfix/issue 9998/review staging (#26)

* add default Avatar image for association and also a type to identify user and voluntary

* :hammer: theme are now sorted by backend

* :hammer: add route for activityById and fix cors and fix isIS

* create admin report page

---------

Co-authored-by: Irwin SOLIMAN <122315710+Irwin-SOLIMAN@users.noreply.github.com>
Co-authored-by: Emmanuelle BONOLI <manu.bonoli@gmail.com>

* Feature/issue 83/display previous association activity images (#33)

* :construction: WIP

* :sparkles: backend fully operational for adding an new activity to DB

* :sparkles: adress is now complete with lat and lon comming from front

* :hammer: back 